--- a/views/Display/temperature.hbs
+++ b/views/Display/temperature.hbs
@@ -63,7 +63,7 @@
             </div>
             
             <h1>Độ oxi hòa tan</h1>
-            <span class="temp" id="s_oxi">23 %</span>
+            <span class="temp" id="s_oxi">23 </span>
 
           </article>
           <!-- partial -->
@@ -78,7 +78,7 @@
             </div>
             
             <h1>Độ đục</h1>
-            <span class="temp" id="s_duc">23 %</span>
+            <span class="temp" id="s_duc">23 </span>
 
           </article>
           <!-- partial -->
@@ -132,8 +132,8 @@ setInterval(loadingData, 5000);
 function parserData(data){
   _temp.textContent = data.temp +"°C";
   _ph.textContent =  data.ph ;
-  _oxi.textContent = data.oxi +"%";
-  _duc.textContent = data.duc +"%";
+  _oxi.textContent = data.oxi ;
+  _duc.textContent = data.duc ;
 }
 </script>
 </body>
