--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,7 +17,7 @@
     <div class="container">
         {{>header}}
         <div class="image-block">
-            <img class="img-fluid image-background" src="/images/wallpaper_1.jpg" alt="Image Title" />
+            <img class="img-fluid image-background" src="/images/b89917abdbdd95c9f14b3dc1bc4c8829.jpg" alt="Image Title" />
         </div>
     </div>
     {{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js" integrity="sha512-olGfMMGjbQdqsUibuBu1j8DJsQCpraWnNnmv5lRqQyJo5Xdd7CmHbk0dJSi5MSz+FbBcdO3BvHr+UiPVIszGXw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
