--- a/views/Control/control.hbs
+++ b/views/Control/control.hbs
@@ -28,12 +28,12 @@
       </thead>
       <tbody class="table-group-divider">
         <tr>
-          <td>Máy Bơm Nước</td>
+          <td>Đèn cảnh báo PH</td>
           <td>
             <input id="ctl_mayBom" type="checkbox" checked="" data-toggle="toggle" data-width="100"
               onchange="deviceChecked(1)">
           </td>
-          <td>Trạng thái: Máy Bơm Nước</td>
+          <td>Đèn cảnh báo PH</td>
           <td>
             <img class="img-fluid" src="/images/led1.png" alt="Image Title" id="maybom_status">
           </td>
