--- a/views/Setting/settingTime.hbs
+++ b/views/Setting/settingTime.hbs
@@ -38,7 +38,7 @@
         <tr>
           <td>
             <br>
-            <h4>Máy Bơm Nước </h4>
+            <h4>Đèn cảnh báo PH</h4>
           </td>
           <td>
             <br>
